parser/tests/bad/arr04-2.st
% lower bound of an 'array' must be positive
%   dynamic formal

procedure p(arr: array 0..* of int)
  % empty
end procedure
